--- a/spring-boot-project/spring-boot-docs/build.gradle
+++ b/spring-boot-project/spring-boot-docs/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id "org.asciidoctor.jvm.convert"
 	id "org.springframework.boot.conventions"
 	id "org.springframework.boot.deployed"
+	id 'org.jetbrains.kotlin.jvm'
 }
 
 description = "Spring Boot Docs"
@@ -171,6 +172,7 @@ dependencies {
 	testRuntimeOnly("org.springframework:spring-jdbc")
 
 	testSlices(project(path: ":spring-boot-project:spring-boot-test-autoconfigure", configuration: "testSliceMetadata"))
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 task dependencyVersions(type: org.springframework.boot.build.constraints.ExtractVersionConstraints) {
@@ -319,6 +321,9 @@ syncDocumentationSourceForAsciidoctor {
 	from("src/main/groovy") {
 		into "main/groovy"
 	}
+	from("src/main/kotlin") {
+		into "main/kotlin"
+	}
 }
 
 syncDocumentationSourceForAsciidoctorMultipage {
@@ -340,6 +345,9 @@ syncDocumentationSourceForAsciidoctorMultipage {
 	from("src/main/groovy") {
 		into "main/groovy"
 	}
+	from("src/main/kotlin") {
+		into "main/kotlin"
+	}
 }
 
 syncDocumentationSourceForAsciidoctorPdf {
@@ -360,6 +368,9 @@ syncDocumentationSourceForAsciidoctorPdf {
 	}
 	from("src/main/groovy") {
 		into "main/groovy"
+	}
+	from("src/main/kotlin") {
+		into "main/kotlin"
 	}
 }
 
@@ -411,5 +422,18 @@ publishing {
 		maven(MavenPublication) {
 			artifact zip
 		}
+	}
+}
+repositories {
+	mavenCentral()
+}
+compileKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
+}
+compileTestKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
 	}
 }
