feat: add Kt alternatives for Java samples from 4.4 to 6.8

--- a/spring-boot-project/spring-boot-docs/build.gradle
+++ b/spring-boot-project/spring-boot-docs/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id "org.asciidoctor.jvm.convert"
 	id "org.springframework.boot.conventions"
 	id "org.springframework.boot.deployed"
+	id 'org.jetbrains.kotlin.jvm'
 }
 
 description = "Spring Boot Docs"
@@ -162,6 +163,7 @@ dependencies {
 	testRuntimeOnly("org.springframework:spring-jdbc")
 
 	testSlices(project(path: ":spring-boot-project:spring-boot-test-autoconfigure", configuration: "testSliceMetadata"))
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 task dependencyVersions(type: org.springframework.boot.build.constraints.ExtractVersionConstraints) {
@@ -310,6 +312,9 @@ syncDocumentationSourceForAsciidoctor {
 	from("src/main/groovy") {
 		into "main/groovy"
 	}
+	from("src/main/kotlin") {
+		into "main/kotlin"
+	}
 }
 
 syncDocumentationSourceForAsciidoctorMultipage {
@@ -331,6 +336,9 @@ syncDocumentationSourceForAsciidoctorMultipage {
 	from("src/main/groovy") {
 		into "main/groovy"
 	}
+	from("src/main/kotlin") {
+		into "main/kotlin"
+	}
 }
 
 syncDocumentationSourceForAsciidoctorPdf {
@@ -351,6 +359,9 @@ syncDocumentationSourceForAsciidoctorPdf {
 	}
 	from("src/main/groovy") {
 		into "main/groovy"
+	}
+	from("src/main/kotlin") {
+		into "main/kotlin"
 	}
 }
 
@@ -402,5 +413,18 @@ publishing {
 		maven(MavenPublication) {
 			artifact zip
 		}
+	}
+}
+repositories {
+	mavenCentral()
+}
+compileKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
+}
+compileTestKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
 	}
 }
