--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,4 @@ org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8
 kotlinVersion=1.6.0
 tomcatVersion=10.0.12
 
-kotlin.stdlib.default.dependency=false
+kotlin.stdlib.default.dependency=true
